# boxscript

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
.github/workflows/: lint.yaml  lint_test.yaml  status_embed.yml
boxscript/: __init__.py  ast.py  box.py  boxes.py  interpreter.py  lex.py  utils.c  utils.pyx
boxscript/editor/: highlight.py  terminal.py
boxscript/lang/: __init__.py  ast.py  boxes.py  lex.py
docs/: digits.bs  digits_bitwise.bs  examples.md  helloworld.bs  syntax.md
editor/: __main__.py  highlight.py  terminal.py
tests/: test_ast.py  test_box.py  test_execution.py  test_utils.py
